repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__link__nonexistent.snap
---
source: repology-webapp/tests/snapshot_tests/link.rs
expression: response.as_snapshot().unwrap()
---
Status: 404
Header: content-type: text/plain; charset=utf-8
Header: content-length: 14
---
link not found
